--- a/Monitor.Shared/packages.config
+++ b/Monitor.Shared/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.ServiceFabric" version="2.0.1-beta1" targetFramework="net46" />
+  <package id="Microsoft.ServiceFabric" version="5.5.216" targetFramework="net46" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net46" />
 </packages>
